@@ -153,7 +153,7 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
     // sort the intervals and calculate abstract error trace
     sortedIntervals.sort(Comparator.comparingInt(Interval::getStart));
     ImmutableList<TraceAtom> selectors = ImmutableList.copyOf(errorTrace.getTrace());
-    Interval maxInterval = sortedIntervals.get(0);
+    Interval maxInterval = sortedIntervals.getFirst();
     int prevEnd = 0;
     List<AbstractTraceElement> abstractTrace = new ArrayList<>();
     for (Interval currInterval : sortedIntervals) {
@@ -229,15 +229,15 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
     TraceAtom lastSelector = null;
 
     for (AbstractTraceElement abstractTraceElement : abstractTrace) {
-      if (abstractTraceElement instanceof TraceAtom) {
+      if (abstractTraceElement instanceof TraceAtom traceAtom) {
         if (abstractTraceElement.equals(lastSelector)) {
           Interval toMerge = (Interval) summarizedList.remove(summarizedList.size() - 3);
-          Interval lastInterval = (Interval) summarizedList.remove(summarizedList.size() - 1);
+          Interval lastInterval = (Interval) summarizedList.removeLast();
           Interval merged = Interval.merge(toMerge, lastInterval, bmgr);
           summarizedList.add(summarizedList.size() - 1, merged);
         } else {
           summarizedList.add(abstractTraceElement);
-          lastSelector = (TraceAtom) abstractTraceElement;
+          lastSelector = traceAtom;
         }
       } else {
         summarizedList.add(abstractTraceElement);
@@ -257,12 +257,12 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
   private Set<Fault> createFaults(List<AbstractTraceElement> abstractTrace) {
     // Stores description of last interval
     ImmutableList<TraceAtom> allSelectors = ImmutableList.copyOf(errorTrace.getTrace());
-    TraceAtom prev = allSelectors.get(0);
+    TraceAtom prev = allSelectors.getFirst();
     Set<Fault> faults = new HashSet<>();
     for (int i = 0; i < abstractTrace.size(); i++) {
       AbstractTraceElement errorInvariant = abstractTrace.get(i);
-      if (errorInvariant instanceof TraceAtom) {
-        prev = (TraceAtom) errorInvariant;
+      if (errorInvariant instanceof TraceAtom traceAtom) {
+        prev = traceAtom;
         Fault singleton = new Fault(prev);
         singleton.setIntendedIndex(i);
         faults.add(singleton);
@@ -273,7 +273,7 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
         if (i + 1 < abstractTrace.size()) {
           next = (TraceAtom) abstractTrace.get(i + 1);
         } else {
-          next = allSelectors.get(allSelectors.size() - 1);
+          next = allSelectors.getLast();
         }
         Set<FaultContribution> contributions = new HashSet<>();
         for (int j = allSelectors.indexOf(prev); j < allSelectors.indexOf(next); j++) {
@@ -340,9 +340,9 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
   /**
    * Return if interpolant is inductive on position i.
    *
-   * @param interpolant A interpolant
+   * @param interpolant An interpolant
    * @param slicePosition where to slice the trace formula
-   * @return true if interpolant is inductive at i, false else
+   * @return whether interpolant is inductive at i
    */
   private boolean isErrInv(Solver solver, BooleanFormula interpolant, int slicePosition)
       throws SolverException, InterruptedException {
@@ -366,7 +366,7 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
     SSAMap shift =
         SSAMap.merge(
             maps.get(slicePosition),
-            maps.get(0),
+            maps.getFirst(),
             MapsDifference.collectMapsDifferenceTo(new ArrayList<>()));
     BooleanFormula shiftedInterpolant = fmgr.instantiate(plainInterpolant, shift);
 
@@ -397,7 +397,7 @@ public class ErrorInvariantsAlgorithm implements FaultLocalizerWithTraceFormula,
    * unsatisfiable.
    *
    * @param formula check if formula is a tautology
-   * @return true if formula is a tautology, false else
+   * @return whether formula is a tautology
    */
   private boolean isValid(Solver solver, BooleanFormula formula)
       throws SolverException, InterruptedException {
