@@ -75,7 +75,7 @@ public class SMGWriteReadTest extends SMGTest0 {
                 .addAndCopy(SMGValue.zeroFloatValue()));
     assertThat(smg.getObjects()).isEqualTo(PersistentSet.of(SMGObject.nullInstance()));
 
-    // Add a SMGObject and assert again
+    // Add an SMGObject and assert again
     SMGObject testObject = createRegion(BigInteger.valueOf(256));
     smg = smg.copyAndAddObject(testObject);
 
@@ -229,7 +229,8 @@ public class SMGWriteReadTest extends SMGTest0 {
             BigInteger.ZERO,
             testObject2.getSize().asNumericValue().bigIntegerValue());
 
-    // We added the zero edge to object2, and did not change anything, so thats the only edge in it!
+    // We added the zero edge to object2, and did not change anything, so that's the only edge in
+    // it!
     assertThat(smg.getEdges(testObject2))
         .containsExactlyElementsIn(ImmutableList.of(expectedZeroEdgeObject2));
 
@@ -351,14 +352,14 @@ public class SMGWriteReadTest extends SMGTest0 {
   }
 
   /*
-   * Test adding a SMGObject to an empty SMG and then write the entire region of the object to 0.
+   * Test adding an SMGObject to an empty SMG and then write the entire region of the object to 0.
    */
   @Test
   public void writeZeroValueForEntireObjectTest() {
     final BigInteger sizeInBitsOfObject = BigInteger.valueOf(256);
     SMGObject testObject = createRegion(sizeInBitsOfObject);
 
-    // Assert that the smg with the object does not have any values/edges etc.
+    // Assert that the SMG with the object does not have any values/edges etc.
     assertThat(smg.getPTEdges().toList())
         .isEqualTo(ImmutableList.of(nullPointer, nullPointer, nullPointer));
     assertThat(smg.getHVEdges().toList()).isEmpty();
@@ -1325,7 +1326,7 @@ public class SMGWriteReadTest extends SMGTest0 {
     smg =
         checkReadExpectedValue(
             testObject, BigInteger.ZERO, BigInteger.valueOf(2 * 8), newValueInSMG0to16);
-    // Read 0 to 32 again, the smg does not change
+    // Read 0 to 32 again, the SMG does not change
     smg =
         checkReadExpectedValue(
             testObject, BigInteger.ZERO, BigInteger.valueOf(4 * 8), newValueInSMG0to32);
@@ -1386,7 +1387,7 @@ public class SMGWriteReadTest extends SMGTest0 {
   /**
    * Write everything to 0 in Byte blocks but leave out every 4th block (starting with block #4).
    * Read the blocks in different combinations. TODO: we should talk about undefined fields! The C99
-   * standard states that as long as a array is uninizialized, it reads whatever is in its memory.
+   * standard states that as long as an array is uninizialized, it reads whatever is in its memory.
    * We essentially do that currently by returning some value.
    */
   @Test
@@ -1606,9 +1607,11 @@ public class SMGWriteReadTest extends SMGTest0 {
             smg.readValue(testObject, BigInteger.valueOf(start), BigInteger.valueOf(i), true);
         smg = readAndSPC.getSMG();
         assertThat(readAndSPC.getHvEdges()).hasSize(1);
-        assertThat(readAndSPC.getHvEdges().get(0).hasValue()).isEqualTo(values[j]);
-        assertThat(readAndSPC.getHvEdges().get(0).getOffset()).isEqualTo(BigInteger.valueOf(start));
-        assertThat(readAndSPC.getHvEdges().get(0).getSizeInBits()).isEqualTo(BigInteger.valueOf(i));
+        assertThat(readAndSPC.getHvEdges().getFirst().hasValue()).isEqualTo(values[j]);
+        assertThat(readAndSPC.getHvEdges().getFirst().getOffset())
+            .isEqualTo(BigInteger.valueOf(start));
+        assertThat(readAndSPC.getHvEdges().getFirst().getSizeInBits())
+            .isEqualTo(BigInteger.valueOf(i));
         start = start + i;
         j++;
       }
@@ -1617,9 +1620,10 @@ public class SMGWriteReadTest extends SMGTest0 {
           smg.readValue(testObject, BigInteger.ZERO, BigInteger.valueOf(8), true);
       smg = read0AndSPC.getSMG();
       assertThat(read0AndSPC.getHvEdges()).hasSize(1);
-      assertThat(read0AndSPC.getHvEdges().get(0).hasValue()).isEqualTo(SMGValue.zeroValue());
-      assertThat(read0AndSPC.getHvEdges().get(0).getOffset()).isEqualTo(BigInteger.valueOf(0));
-      assertThat(read0AndSPC.getHvEdges().get(0).getSizeInBits()).isEqualTo(BigInteger.valueOf(8));
+      assertThat(read0AndSPC.getHvEdges().getFirst().hasValue()).isEqualTo(SMGValue.zeroValue());
+      assertThat(read0AndSPC.getHvEdges().getFirst().getOffset()).isEqualTo(BigInteger.valueOf(0));
+      assertThat(read0AndSPC.getHvEdges().getFirst().getSizeInBits())
+          .isEqualTo(BigInteger.valueOf(8));
 
       // And the unknown at the end
       SMGAndHasValueEdges readUAndSPC =
@@ -1627,12 +1631,14 @@ public class SMGWriteReadTest extends SMGTest0 {
       smg = readUAndSPC.getSMG();
       assertThat(readUAndSPC.getHvEdges()).hasSize(1);
       if (symbolicValue == null) {
-        symbolicValue = readUAndSPC.getHvEdges().get(0).hasValue();
+        symbolicValue = readUAndSPC.getHvEdges().getFirst().hasValue();
       } else {
-        assertThat(readUAndSPC.getHvEdges().get(0).hasValue()).isEqualTo(symbolicValue);
+        assertThat(readUAndSPC.getHvEdges().getFirst().hasValue()).isEqualTo(symbolicValue);
       }
-      assertThat(readUAndSPC.getHvEdges().get(0).getOffset()).isEqualTo(BigInteger.valueOf(248));
-      assertThat(readUAndSPC.getHvEdges().get(0).getSizeInBits()).isEqualTo(BigInteger.valueOf(8));
+      assertThat(readUAndSPC.getHvEdges().getFirst().getOffset())
+          .isEqualTo(BigInteger.valueOf(248));
+      assertThat(readUAndSPC.getHvEdges().getFirst().getSizeInBits())
+          .isEqualTo(BigInteger.valueOf(8));
     }
   }
 
@@ -1671,10 +1677,10 @@ public class SMGWriteReadTest extends SMGTest0 {
         smg = readEdgesAndSMG.getSMG();
         assertThat(readEdgesAndSMG.getHvEdges()).hasSize(1);
         if (i < 128) {
-          assertThat(readEdgesAndSMG.getHvEdges().get(0).hasValue()).isEqualTo(expectedValue);
+          assertThat(readEdgesAndSMG.getHvEdges().getFirst().hasValue()).isEqualTo(expectedValue);
         }
         // TODO: unknown value in the end
-        assertThat(readEdgesAndSMG.getHvEdges().get(0).getOffset())
+        assertThat(readEdgesAndSMG.getHvEdges().getFirst().getOffset())
             .isEqualTo(BigInteger.valueOf(start));
         start = start + i;
         j++;
@@ -1706,7 +1712,7 @@ public class SMGWriteReadTest extends SMGTest0 {
     SMG newSMG = readReinterpretation.getSMG();
 
     assertThat(readReinterpretation.getHvEdges()).hasSize(1);
-    assertThat(readReinterpretation.getHvEdges().get(0).hasValue()).isEqualTo(expectedValue);
+    assertThat(readReinterpretation.getHvEdges().getFirst().hasValue()).isEqualTo(expectedValue);
     // Check that no new values are introduced by the read
     assertThat(newSMG.getValues().keySet()).isEqualTo(allValuesBeforeRead);
     return newSMG;
@@ -1741,13 +1747,13 @@ public class SMGWriteReadTest extends SMGTest0 {
             .findFirst()
             .orElseThrow();
     assertThat(readReinterpretation.getHvEdges()).hasSize(1);
-    assertThat(readReinterpretation.getHvEdges().get(0).hasValue()).isEqualTo(newValue);
+    assertThat(readReinterpretation.getHvEdges().getFirst().hasValue()).isEqualTo(newValue);
     // Assert that there is now a new SMGHasValueEdge for the field with the new value.
     // Since its sets, it doesn't matter if this is read repeatedly.
     assertThat(newSMG.getEdges(testObject))
         .isEqualTo(oldEdgesForObject.addAndCopy(new SMGHasValueEdge(newValue, offset, size)));
     assertThat(readReinterpretation.getHvEdges()).hasSize(1);
-    return new SMGandValue(newSMG, readReinterpretation.getHvEdges().get(0).hasValue());
+    return new SMGandValue(newSMG, readReinterpretation.getHvEdges().getFirst().hasValue());
   }
 
   private SMG checkReadPreciseValuesInOrder(
